hphp/test/zend/bad/unset_cv07.php
<?php
$_x = "1\n";
echo $_x;
import_request_variables("g","_");
echo $_x;
echo "\nok\n";
?>